<resources>
    <string name="app_name">Elements Food App</string>
    <string name="title_home">Startseite</string>
    <string name="title_favorites">Favoriten</string>
    <string name="title_food_list">Liste</string>
    <string name="search_title">Suchen</string>
    <string name="title_add_new_food">Nahrungsmittel hinzufügen</string>
    <string name="action_confirm">Confirm</string>
    <string name="add_food_name">Name des Lebensmittels</string>
    <string name="add_food_effect">Wirkung</string>
    <string name="title_filter">Filter</string>
    <string name="text_filter_wood">Holz</string>
    <string name="text_filter_fire">Feuer</string>
    <string name="text_filter_earth">Erde</string>
    <string name="text_filter_metal">Metal</string>
    <string name="text_filter_water">Wasser</string>
    <string name="chips_title_text_element">Elemente</string>
    <string name="chips_title_text_type">Lebensmittelart</string>
    <string name="text_filter_fruits">Beeren und Früchte</string>
    <string name="text_filter_fish">Fisch und Meeresfrüchte</string>
    <string name="text_filter_meat">Fleisch</string>
    <string name="text_filter_vegetable">Gemüse</string>
    <string name="text_filter_grain">Getreide</string>
    <string name="text_filter_spices">Gewürze</string>
    <string name="text_filter_legumes">Hülsenfrüchte</string>
    <string name="text_filter_herbs">Kräuter</string>
    <string name="text_filter_dairy">Milchprodukte</string>
    <string name="text_filter_nuts">Nüsse und Samen</string>
    <string name="text_filter_oil">Öle und Fette</string>
    <string name="text_filter_sweetener">Süßmittel</string>
    <string name="text_filter_other">Sonstige</string>
    <string name="chips_title_text_flavor">Geschmacksrichtung</string>
    <string name="text_filter_bitter">Bitter</string>
    <string name="text_filter_salty">Salzig</string>
    <string name="text_filter_sour">Sauer</string>
    <string name="text_filter_spicy">Scharf</string>
    <string name="text_filter_sweet">Süß</string>
    <string name="chips_title_text_thermal">Thermische Wirkung</string>
    <string name="text_filter_refreshing">Erfrischend</string>
    <string name="text_filter_hot">Heiß</string>
    <string name="text_filter_cold">Kalt</string>
    <string name="text_filter_neutral">Neutral</string>
    <string name="text_filter_warm">Warm</string>
    <string name="chips_title_text_organ">Zielorgan</string>
    <string name="text_filter_bladder">Blase</string>
    <string name="text_filter_intestineL">Dickdarm</string>
    <string name="text_filter_intestineS">Dünndarm</string>
    <string name="text_filter_gallbladder">Gallenblase</string>
    <string name="text_filter_heart">Herz</string>
    <string name="text_filter_liver">Leber</string>
    <string name="text_filter_lung">Lunge</string>
    <string name="text_filter_stomach">Magen</string>
    <string name="text_filter_spleen">Milz</string>
    <string name="text_filter_kidney">Niere</string>
    <string name="filter_title">Filter</string>
    <string name="hideArrow">Hide</string>
    <string name="ergebnisse_anzeigen">Ergebnisse anzeigen</string>
    <string name="import_db">Import DB</string>
    <string name="export_db">Export DB</string>
    <string name="action_delete">Löschen</string>
    <string name="action_favorite">Favorit hinzufügen</string>
    <string name="home_last_viewed_title">Zuletzt angesehen</string>
    <string name="delete_history">Verlauf löschen</string>
    <string name="action_check">Suchen nach Wirkung</string>
    <string name="search_effect_hint">Suchen nach Wirkung …</string>
    <string name="search_food_hint">Suchen …</string>
    <string-array name="food_properties_array">
        <item>Lebensmittelart</item>
        <item>Element</item>
        <item>Geschmacksrichtung</item>
        <item>Thermische Wirkung</item>
        <item>Zielorgan</item>
    </string-array>
    <string-array name="food_type_array">
        <item>Beeren und Früchte</item>
        <item>Fisch und Meeresfrüchte</item>
        <item>Fleisch</item>
        <item>Gemüse</item>
        <item>Getreide</item>
        <item>Gewürze</item>
        <item>Hülsenfrüchte</item>
        <item>Kräuter</item>
        <item>Milchprodukte</item>
        <item>Nüsse und Samen</item>
        <item>Öle und Fette</item>
        <item>Süßmittel</item>
        <item>Sonstige</item>
    </string-array>
    <string-array name="food_elements_array">
        <item>Holz</item>
        <item>Feuer</item>
        <item>Erde</item>
        <item>Metal</item>
        <item>Wasser</item>
    </string-array>
    <string-array name="food_flavor_array">
        <item>Bitter</item>
        <item>Salzig</item>
        <item>Sauer</item>
        <item>Scharf</item>
        <item>Süß</item>
    </string-array>
    <string-array name="food_temp_behavior_array">
        <item>Erfrischend</item>
        <item>Heiß</item>
        <item>Kalt</item>
        <item>Neutral</item>
        <item>Warm</item>
    </string-array>
    <string-array name="food_target_organ">
        <item>Blase</item>
        <item>Dickdarm</item>
        <item>Dünndarm</item>
        <item>Gallenblase</item>
        <item>Herz</item>
        <item>Leber</item>
        <item>Lunge</item>
        <item>Magen</item>
        <item>Milz</item>
        <item>Niere</item>
    </string-array>
</resources>